[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/BGPuzzle.png" type="Texture" id=1]
[ext_resource path="res://picross.tres" type="Theme" id=2]
[ext_resource path="res://5x5.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Level5.gd" type="Script" id=4]
[ext_resource path="res://assets/dialogue/dialogue.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/GJ_Angel.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/Angel_Auld_Lang_Syne.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Finish.wav" type="AudioStream" id=8]
[ext_resource path="res://Menu.tres" type="Theme" id=9]
[ext_resource path="res://Menu/continueButton_text.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/Credits.wav" type="AudioStream" id=11]
[ext_resource path="res://Menu/blueButton.png" type="Texture" id=12]
[ext_resource path="res://Menu/blueButtonHovered.png" type="Texture" id=13]

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("bgm_fade/bgm:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="GDScript" id=1]
script/source = "extends Camera2D
"

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 6.0

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "next_scene"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Level5" type="Node2D"]
script = ExtResource( 4 )

[node name="solved" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="next_level" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="bgm_fade" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 5 )

[node name="bgm" type="AudioStreamPlayer" parent="bgm_fade"]
stream = ExtResource( 7 )
autoplay = true

[node name="BgPuzzle" type="Sprite" parent="."]
position = Vector2( 133, 91 )
scale = Vector2( 2.44286, 2.44286 )
texture = ExtResource( 1 )
offset = Vector2( 25.5556, 32.7485 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.305, 0.305 )
script = SubResource( 1 )

[node name="Level" type="Label" parent="."]
margin_left = 10.0
margin_top = 4.0
margin_right = 382.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 83, 174 )
theme = ExtResource( 2 )
text = "Level 5 - Angel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B1" parent="." instance=ExtResource( 3 )]
position = Vector2( 88, 42 )

[node name="B2" parent="." instance=ExtResource( 3 )]
position = Vector2( 169, 42 )

[node name="B3" parent="." instance=ExtResource( 3 )]
position = Vector2( 88, 125 )

[node name="B5" parent="." instance=ExtResource( 3 )]
position = Vector2( 88, 208 )

[node name="B4" parent="." instance=ExtResource( 3 )]
position = Vector2( 169, 125 )

[node name="B6" parent="." instance=ExtResource( 3 )]
position = Vector2( 169, 208 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R0" type="Label" parent="Panel"]
margin_left = 54.0
margin_top = 70.0
margin_right = 118.0
margin_bottom = 86.0
theme = ExtResource( 2 )
text = "2"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R1" type="Label" parent="Panel"]
margin_left = 54.0
margin_top = 86.0
margin_right = 118.0
margin_bottom = 102.0
theme = ExtResource( 2 )
text = "0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R2" type="Label" parent="Panel"]
margin_left = 54.0
margin_top = 102.0
margin_right = 118.0
margin_bottom = 118.0
theme = ExtResource( 2 )
text = "4"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R3" type="Label" parent="Panel"]
margin_left = 54.0
margin_top = 118.0
margin_right = 118.0
margin_bottom = 134.0
theme = ExtResource( 2 )
text = "4"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R4" type="Label" parent="Panel"]
margin_left = 54.0
margin_top = 134.0
margin_right = 118.0
margin_bottom = 150.0
theme = ExtResource( 2 )
text = "6"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R5" type="Label" parent="Panel"]
margin_left = 61.0
margin_top = 153.0
margin_right = 117.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 103, 50 )
theme = ExtResource( 2 )
text = "1 4 1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R6" type="Label" parent="Panel"]
margin_left = 86.0
margin_top = 169.0
margin_right = 118.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 79, 34 )
theme = ExtResource( 2 )
text = "3 1 2"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R7" type="Label" parent="Panel"]
margin_left = 86.0
margin_top = 185.0
margin_right = 116.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 79, 18 )
theme = ExtResource( 2 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R8" type="Label" parent="Panel"]
margin_left = 68.0
margin_top = 201.0
margin_right = 116.0
margin_bottom = 217.0
rect_pivot_offset = Vector2( 95, 2 )
theme = ExtResource( 2 )
text = "8"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R9" type="Label" parent="Panel"]
margin_left = 70.0
margin_top = 217.0
margin_right = 116.0
margin_bottom = 233.0
rect_pivot_offset = Vector2( 95, -14 )
theme = ExtResource( 2 )
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R10" type="Label" parent="Panel"]
margin_left = 61.0
margin_top = 237.0
margin_right = 117.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 103, 50 )
theme = ExtResource( 2 )
text = "9"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R11" type="Label" parent="Panel"]
margin_left = 86.0
margin_top = 253.0
margin_right = 116.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 79, 34 )
theme = ExtResource( 2 )
text = "7"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R12" type="Label" parent="Panel"]
margin_left = 86.0
margin_top = 269.0
margin_right = 116.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 79, 18 )
theme = ExtResource( 2 )
text = "9"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R13" type="Label" parent="Panel"]
margin_left = 68.0
margin_top = 285.0
margin_right = 116.0
margin_bottom = 301.0
rect_pivot_offset = Vector2( 95, 2 )
theme = ExtResource( 2 )
text = "9"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R14" type="Label" parent="Panel"]
margin_left = 70.0
margin_top = 301.0
margin_right = 116.0
margin_bottom = 317.0
rect_pivot_offset = Vector2( 95, -14 )
theme = ExtResource( 2 )
text = "1 1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C0" type="Label" parent="Panel"]
margin_left = 119.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "2
1"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C1" type="Label" parent="Panel"]
margin_left = 135.0
margin_top = 15.0
margin_right = 151.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "6
2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C8" type="Label" parent="Panel"]
margin_left = 248.0
margin_top = 15.0
margin_right = 264.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "8"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C2" type="Label" parent="Panel"]
margin_left = 151.0
margin_top = 15.0
margin_right = 167.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "1
8"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C3" type="Label" parent="Panel"]
margin_left = 167.0
margin_top = 15.0
margin_right = 183.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "4
8"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C4" type="Label" parent="Panel"]
margin_left = 183.0
margin_top = 15.0
margin_right = 199.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "1
4
8"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C5" type="Label" parent="Panel"]
margin_left = 199.0
margin_top = 15.0
margin_right = 215.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "1
12"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C6" type="Label" parent="Panel"]
margin_left = 215.0
margin_top = 15.0
margin_right = 231.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "4
8"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C7" type="Label" parent="Panel"]
margin_left = 231.0
margin_top = 15.0
margin_right = 247.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "1
7"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C9" type="Label" parent="Panel"]
margin_left = 264.0
margin_top = 15.0
margin_right = 280.0
margin_bottom = 71.0
theme = ExtResource( 2 )
text = "3
2
2"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_finish" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GoodWork" type="Label" parent="."]
visible = false
margin_left = 162.0
margin_top = 24.0
margin_right = 235.0
margin_bottom = 42.0
theme = ExtResource( 9 )
text = "Wonderful!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="HBoxContainer" parent="."]
visible = false
margin_left = 150.0
margin_top = 305.0
margin_right = 204.0
margin_bottom = 317.0
rect_scale = Vector2( 1.7, 1.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureButton" parent="continue"]
margin_right = 54.0
margin_bottom = 12.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="text" type="Sprite" parent="continue"]
position = Vector2( 27, 6 )
texture = ExtResource( 10 )

[node name="appear" type="AnimationPlayer" parent="."]
root_node = NodePath("../GjAngel")
anims/RESET = SubResource( 6 )
anims/appear = SubResource( 7 )

[node name="GjAngel" type="Sprite" parent="."]
visible = false
position = Vector2( 196, 172 )
scale = Vector2( 5.3125, 5.3125 )
texture = ExtResource( 6 )

[node name="dialogue" parent="." instance=ExtResource( 5 )]
offset = Vector2( 145, 10 )
scale = Vector2( 2.5, 2.5 )
transform = Transform2D( 2.5, 0, 0, 2.5, 145, 10 )
dialogue = "res://assets/dialogue/json/level5.json"

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../fade")
anims/RESET = SubResource( 2 )
anims/fade_out = SubResource( 3 )
anims/next_scene = SubResource( 8 )

[node name="fade" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = -0.999998
margin_right = 99.0
margin_bottom = 99.0
rect_scale = Vector2( 100, 100 )
mouse_filter = 2
color = Color( 1, 1, 1, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="level_finish" to="." method="level_finish"]
[connection signal="pressed" from="continue/button" to="." method="_on_button_pressed"]
